feat: add loadout
